Chore: Updated the .env example for setup of possible contributors

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=(your app key here)
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+#remove the '#' below and set your database configuration
+DB_CONNECTION=(your database connection here e.g., mysql)
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PASSWORD= 
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +64,22 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+#LISK BLOCKCHAIN CONFIGURATION
+
+#Lisk Network Settings
+LISK_NETWORK= #your Lisk network (e.g., mainnet, sepolia)
+LISK_RPC_URL= #your Lisk RPC URL (e.g., https://rpc-sepolia.lisk.com)
+LISK_CHAIN_ID= #your Lisk chain ID (e.g., 4202)
+LISK_EXPLORER_URL=https://sepolia-blockscout.lisk.com/
+
+#Your BayanihanCebu Platform Wallet
+BAYANIHAN_CEBU_WALLET= #your BayanihanCebu platform wallet address (e.g., 0x...)
+
+#Your Private Key (64 characters, NO 0x prefix!)
+#Replace with YOUR actual private key from MetaMask
+LISK_PRIVATE_KEY= #your private key (64 characters, no 0x prefix)
+
+#Blockchain Status
+BLOCKCHAIN_ENABLED=true
