--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ yarn-error.log*
 # Hardhat build artifacts (redundant safety)
 blockchain-services/artifacts/
 blockchain-services/cache/
+storage/framework/views/ 
+storage/framework/sessions/ 
+storage/framework/cache/ 
