--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "serve": "php artisan serve",
-        "start": "concurrently \"php artisan serve\" \"npm run dev\""
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.2.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
-    },
-    "dependencies": {
-        "ethers": "^5.7.2"
-    }
+  "$schema": "https://json.schemastore.org/package.json",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "serve": "php artisan serve",
+    "start": "concurrently \"php artisan serve\" \"npm run dev\"",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.11.0",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.38.0",
+    "husky": "^9.1.7",
+    "laravel-vite-plugin": "^2.0.0",
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.0.7"
+  },
+  "dependencies": {
+    "ethers": "^5.7.2"
+  }
 }
