--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "serve": "php artisan serve",
     "start": "concurrently \"php artisan serve\" \"npm run dev\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
