--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "serve": "php artisan serve",
-    "start": "concurrently \"php artisan serve\" \"npm run dev\"",
+    "start": "concurrently \"php artisan serve\" \"npm run dev\" \"start-queue-worker.bat\"",
     "prepare": "husky"
   },
   "devDependencies": {
