--- a/package.json
+++ b/package.json
@@ -10,17 +10,33 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
-    "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.38.0",
     "husky": "^9.1.7",
     "laravel-vite-plugin": "^2.0.0",
-    "tailwindcss": "^4.0.0",
     "vite": "^7.0.7"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "ethers": "^5.8.0"
-  }
+  },
+  "name": "bayanihancebubackend",
+  "version": "1.0.0",
+  "description": "<p align=\"center\">   <img src=\"https://via.placeholder.com/200\" alt=\"BayanihanCebu Logooo\" width=\"200\"> </p>",
+  "main": "eslint.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jadjala/BayanihanCebuBackEnd.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jadjala/BayanihanCebuBackEnd/issues"
+  },
+  "homepage": "https://github.com/jadjala/BayanihanCebuBackEnd#readme"
 }
