chore: updated .env.example and cleaned up unnecessary files

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,23 @@ LISK_PRIVATE_KEY= #your private key (64 characters, no 0x prefix)
 
 #Blockchain Status
 BLOCKCHAIN_ENABLED=true
+
+PAYMONGO_PUBLIC_KEY= #your PayMongo public key
+PAYMONGO_SECRET_KEY= #your PayMongo secret key
+PAYMONGO_WEBHOOK_SECRET= #your PayMongo webhook secret
+PAYMONGO_WEBHOOK_URL= #your PayMongo webhook URL
+
+
+#BLOCKCHAIN CONTRACT CONFIGURATION
+
+CONTRACT_ADDRESS= #your deployed contract address (e.g., 0x...) 
+CONTRACT_ABI_PATH= ./path/to/your/contract_abi.json
+METAMASK_PRIVATE_KEY= #your MetaMask private key (64 characters, no 0x prefix)
+SEPOLIA_RPC_URL= #your Sepolia RPC URL (e.g., https://sepolia.infura.io/v3/your-infura-project-id)
+
+# DonationRecorder Contract (Physical Donations)
+DONATION_RECORDER_CONTRACT_ADDRESS=  #your DonationRecorder contract address (e.g., 0x...)    
+BLOCKCHAIN_ADMIN_WALLET=  #your blockchain admin wallet address (e.g., 0x...)
+BLOCKCHAIN_ADMIN_PRIVATE_KEY=  #your blockchain admin private key (64 characters, no 0x prefix)
+WEB3_PROVIDER_URL=  #your Web3 provider URL (e.g., https://rpc.sepolia-api.lisk.com/)
+
