--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.38.0",
